force-app/main/default/objects/OAI_Survey__c/OAI_Survey__c.object-meta.xml
<CustomObject>
    <label>OAI Survey</label>
    <nameField>
        <displayFormat>O_PCS-{00000000}</displayFormat>
        <label>Observe Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAI Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>