force-app/main/default/objects/OAI_Survey__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <formula>Vonage_Call_Summary__r.NVMStatsSF__Agent__r.FirstName + &apos; &apos; +  Vonage_Call_Summary__r.NVMStatsSF__Agent__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Name</label>
    <type>Text</type>
</CustomField>