force-app/main/default/objects/OAI_Survey__c/fields/Call_GUID__c.field-meta.xml
<CustomField>
    <fullName>Call_GUID__c</fullName>
    <label>Call GUID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>