force-app/main/default/objects/OAI_Survey__c/fields/CLID__c.field-meta.xml
<CustomField>
    <fullName>CLID__c</fullName>
    <description>Calling line identification</description>
    <label>CLID</label>
    <type>Phone</type>
</CustomField>