force-app/main/default/objects/OAI_Survey__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>AND(
  Question_1__c &gt; 0,
  Question_2__c &gt; 0,
  Question_3__c &gt;= 0,
  NOT(ISBLANK(TEXT(Question_4__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>