force-app/main/default/objects/OAI_Survey__c/fields/NPS_Category__c.field-meta.xml
<CustomField>
    <fullName>NPS_Category__c</fullName>
    <formula>IF( Question_3__c &gt;= 9, &quot;Promoter&quot;, 
    IF( Question_3__c &gt;= 7, &quot;Passive&quot;, 
    IF( Question_3__c &lt;= 6, &quot;Detractor&quot;, &quot;Unknown&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Category</label>
    <type>Text</type>
</CustomField>