force-app/main/default/objects/OAI_Survey__c/fields/Promoter_count__c.field-meta.xml
<CustomField>
    <fullName>Promoter_count__c</fullName>
    <formula>IF( NPS_Category__c  = &apos;Promoter&apos;, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promoter count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>