force-app/main/default/objects/OAI_Survey__c/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <label>Question 1</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>