force-app/main/default/objects/OAI_Survey__c/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <label>Question 2</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>