force-app/main/default/objects/OAI_Survey__c/fields/Question_3__c.field-meta.xml
<CustomField>
    <fullName>Question_3__c</fullName>
    <label>Question 3</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>