force-app/main/default/objects/OAI_Survey__c/fields/Question_3_Detail__c.field-meta.xml
<CustomField>
    <fullName>Question_3_Detail__c</fullName>
    <label>Question 3 Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>