force-app/main/default/objects/OAI_Survey__c/fields/Question_4_deprecated__c.field-meta.xml
<CustomField>
    <fullName>Question_4_deprecated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Question 4 (deprecated)</label>
    <type>Checkbox</type>
</CustomField>