force-app/main/default/objects/OAI_Survey__c/fields/User_Is_Agent__c.field-meta.xml
<CustomField>
    <fullName>User_Is_Agent__c</fullName>
    <formula>Vonage_Call_Summary__r.NVMStatsSF__Agent__r.Id  == $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Is Agent</label>
    <type>Checkbox</type>
</CustomField>