force-app/main/default/objects/OAI_Survey__c/fields/Vonage_Call_Summary__c.field-meta.xml
<CustomField>
    <fullName>Vonage_Call_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vonage Call Summary</label>
    <referenceTo>NVMStatsSF__NVM_Call_Summary__c</referenceTo>
    <relationshipLabel>OAI Surveys</relationshipLabel>
    <relationshipName>OAI_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>