force-app/main/default/objects/OAI_Survey__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CLID__c</columns>
    <columns>Call_GUID__c</columns>
    <columns>Question_1__c</columns>
    <columns>Question_2__c</columns>
    <columns>Question_3__c</columns>
    <columns>Question_4__c</columns>
    <columns>Completed__c</columns>
    <columns>Vonage_Call_Summary__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>