force-app/main/default/objects/OAI_Survey__c/listViews/All_Today.listView-meta.xml
<ListView>
    <fullName>All_Today</fullName>
    <columns>NAME</columns>
    <columns>CLID__c</columns>
    <columns>Task_ID__c</columns>
    <columns>Question_1__c</columns>
    <columns>Question_2__c</columns>
    <columns>Question_3__c</columns>
    <columns>Question_4__c</columns>
    <columns>Vonage_Call_Summary__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Today</label>
</ListView>